--- a/Views/userLikes.ejs
+++ b/Views/userLikes.ejs
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-        <title>Menú principal</title>
+        <title>Artículos favoritos</title>
     </head>
 
     <body>
@@ -17,7 +17,7 @@
             
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item me-4">
-                <a class="nav-link text-white fw-bold" href="/home">Menú principal</a>
+                <a class="nav-link text-white" href="/home">Menú principal</a>
               </li>
               <li class="nav-item me-4">
                 <a class="nav-link text-white" href="/newarticle">Crer artículo</a>
@@ -26,7 +26,7 @@
                 <a class="nav-link text-white" href="/userarticles">Mis artículos</a>
               </li>
               <li class="nav-item me-4">
-                <a class="nav-link text-white" href="/userlikes">Artículos favoritos</a>
+                <a class="nav-link text-white fw-bold" href="/userlikes">Artículos favoritos</a>
               </li>
             </ul>
             
@@ -42,7 +42,7 @@
 
       <section class="mt-4">
         <div class="container">
-            <form method="POST" action="/searcharticle">
+            <form method="POST" action="/searchfavarticle">
                 <div class="input-group">
                     <input type="search" value="<%=locals.title%>" class="form-control rounded" placeholder="Buscar" aria-label="Search" aria-describedby="search-addon" name="title"/>
                     <button type="submit" class="btn" style=" border-color: #735d78; color: #735d78;">Buscar</button>
