--- a/Views/viewArticle.ejs
+++ b/Views/viewArticle.ejs
@@ -83,6 +83,38 @@
 
       <section class="mt-4">
         <!-- Aquí van los comentarios-->
+        <div class="container">
+          <div class="card my-4" style="width:750px">
+            <h5 class="card-header">Deja tu comentario:</h5>
+            <div class="card-body">
+              <form method="post">
+                <input type="hidden">
+                <div class="form-group">
+                  <textarea class="form-control" name="comment" placeholder="Comentario" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn me-3 mt-3" style="background-color: #ffd60a;">Enviar</button>
+              </form>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="media">
+            <div class="media-body">
+              <h5 class="mt-0">username<!-- Aquí va el username del post que se hizo--></h5>
+                postanterior<!-- Aquí va el post que se hizo--> 
+
+              <div class="col-md-3"></div>         
+                  <form>
+                    <div class="form-group" style="width:450px">
+                        <textarea class="form-control" name="comment" placeholder="Responder comentario" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-info btn-sm" style="background-color: #ffd60a;">Responder</button>
+                  </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
     </body>
