WIP: 935fc88 Muchos cambios

--- a/Views/newArticle.ejs
+++ b/Views/newArticle.ejs
@@ -60,7 +60,7 @@
                     <textarea required name="content" id="content" value="<%=locals.content%>" class="form-control"></textarea>
                   </div>
                 
-                  <button type="submit" class="btn btn-dark btn-block">Guardar</button>
+                  <button type="submit" class="btn btn-dark btn-block mb-4">Guardar</button>
             </form>
           </div>
 
